# auto_config_wifi_html

./: CMakeLists.txt  sdkconfig  sdkconfig.old
components/change_html/: CMakeLists.txt  Change_HTML.c  Change_HTML.h
components/connectwifi/: CMakeLists.txt  ConnectWIFI.c  ConnectWIFI.h
components/dns_server/: dns_server.c
components/webserver/: CMakeLists.txt  index copy 2.html  index copy.html  index.html  webserver-csdn.c  webserver-csdn改整体发送.c  webserver.c  webserver原版.c  webserver原版没改.c
main/: CMakeLists.txt  main.c
